Added following feature
